* ctrl+f opens Chrome's menu - fixed borders of adjacent units are too close - fixed I got this error - Cannot read property 'start_index' of null - fixed It should not allow selecting parts of unit. Currently allows with the mouse when starting from tokens and dragging the mouse selection over a unit (doesn't always happen) - fixed units that were already created disappear when pressing up/down (with an error), which results in a cascade of errors. - fixed Remote units: strange behavior when selecting a unit that are not selectable as remote (for example, its parent): the sub-tree disappears - fixed when successfully selecting a remote unit, the focus should change to the new remote unit. - fixed there's a strange effect when moving focus (the unit box shakes a bit). could you remove this? - fixed

--- a/Client/src/sass/app/pages/annotation.scss
+++ b/Client/src/sass/app/pages/annotation.scss
@@ -3,6 +3,12 @@
   to { opacity: 0.0; }
 }
 
+.auth-main{
+  .error-block{
+    color: #fff;
+  }
+}
+
 .annotation-page-container{
 
 
